<resources>
    <string name="app_name">MyNotes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for MainActivity -->
    <string name="prompt_title">Заголовок</string>
    <string name="prompt_text">Текст</string>
    <string name="prompt_date">Дата</string>
    <string name="prompt_save_btn">Save</string>
    <string name="prompt_go_about_btn">About</string>
    <string name="prompt_back_btn">Back</string>

    <string name="msg_success">Сохранение выполнено успешно. Заголовок</string>
    <string name="msg_success_ok">Сохранение выполнено успешно!</string>
    <string name="msg_delete_success_ok">Удаление выполнено успешно!</string>
    <string name="msg_not_success">Сохранение не выполнено</string>
    <string name="msg_data_blank">Данные не заполнены</string>
    <string name="msg_error_save_text">Нe удалось сохранить тект</string>
    <string name="msg_on_create">onCreate</string>
    <string name="msg_on_start">onStart</string>
    <string name="msg_on_resume">onResume</string>
    <string name="msg_on_pause">onPause</string>
    <string name="msg_on_stop">onStop</string>
    <string name="msg_on_destroy">onDestroy</string>
    <string name="dialog_save_title">Сохранение заметки</string>
    <string name="dialog_delete_title">Удаление заметки</string>
    <string name="msg_dialog_save">Действительно сохранить заметку?</string>
    <string name="msg_dialog_delete">Действительно удалить заметку?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="msg_shareData">Intent shareData</string>
    <string name="msg_openAbout">Intent openAbout</string>
    <string name="msg_openPagerView">Intent openPagerView</string>
    <string name="msg_backToMain">Intent mainActivity</string>
    <string name="msg_intent_frag">Intent Fragment</string>
    <string name="msg_load_notes">Load All Notes</string>
    <string name="msg_load_test_notes">Load Test Dates</string>

    <!--Strings used for for Share Btn-->
    <string name="prompt_share_btn">Share</string>

    <!-- Strings used for AboutActivity -->
    <string name="about_text">MyNote v1.0</string>
    <string name="about_back_btn"><![CDATA[<]]> Back</string>

    <!--  Strings used for Dialog-->
    <string name="warning_dialog_text">Ошибка</string>
    <string name="warning_ok">Ok</string>
    <string name="toolbar_add">Добавить</string>
    <string name="toolbar_about">Об приложении</string>
    <string name="toolbar_save">Сохранить</string>
    <string name="toolbar_share">Передать</string>
    <string name="toolbar_delete">Удалить</string>
    <string name="title_activity_note">Item note</string>
    <string name="title_activity_main">Notes</string>

</resources>