<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_fragment_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding_5"
    android:layout_centerVertical="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:id="@+id/linear_fragment_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding_5"
        android:layout_centerVertical="true"
        tools:viewBindingIgnore="true"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_view_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Toolbar"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_activity_note">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbar_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbar_text_size"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/toolbar_btn_save_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/activity_padding_10"
                android:title="@string/toolbar_save"
                android:src="@android:drawable/ic_menu_save"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/share_data_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/activity_padding_10"
                android:title="@string/toolbar_share"
                android:src="@android:drawable/ic_dialog_email"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/toolbar_btn_delete_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/activity_padding_10"
                android:title="@string/toolbar_delete"
                android:src="@android:drawable/ic_menu_delete"/>
        </androidx.appcompat.widget.Toolbar>
        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_text"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/prompt_title"
            android:inputType="text"
            android:minHeight="@dimen/edit_text_minHeight"
            android:padding="@dimen/activity_padding_5"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/noteText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/edit_text_multi_marginTop"
            android:background="@drawable/edit_text"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/prompt_text"
            android:inputType="textMultiLine"
            android:padding="@dimen/activity_padding_5"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="@+id/noteTitle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/activity_padding_1"
        android:layout_centerVertical="true"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/noteCreateDate"
            style="@style/TextViewStyle"
            android:hint="@string/prompt_date"
            app:layout_constraintBottom_toBottomOf="@+id/noteText"
            tools:text="note date:" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>